--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -160,7 +161,6 @@ allow 162.247.74.216;
 allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
-allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.213.212;
 allow 163.172.45.102;
@@ -847,6 +847,7 @@ allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
+allow 209.141.62.183;
 allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.69.167.80;
@@ -937,6 +938,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
@@ -957,6 +959,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c07::f03c:94ff:fe12:513e;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
@@ -1244,15 +1247,19 @@ allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
+allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
+allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
 allow 2a05:b0c7:6b72::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
 allow 2a05:b0c7:6cd8::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1477,7 +1484,6 @@ allow 2a0c:2500:571:3d9:5f6b:d5f4:a8cf:c713;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
@@ -1525,6 +1531,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 35.0.127.52;
+allow 35.168.83.119;
 allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.120.188.156;
@@ -1540,6 +1547,7 @@ allow 38.97.116.244;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.129.199.163;
+allow 45.130.20.250;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1667,7 +1675,6 @@ allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
-allow 54.164.156.164;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1735,6 +1742,9 @@ allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
+allow 84.54.51.61;
+allow 84.54.51.68;
+allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.204.116.211;
 allow 85.204.116.88;
@@ -1773,6 +1783,7 @@ allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.139.160.150;
+allow 91.203.145.116;
 allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
@@ -1795,7 +1806,6 @@ allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.243.56.177;
-allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
 allow 93.95.228.205;
