--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -161,6 +160,7 @@ allow 162.247.74.216;
 allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
+allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.213.212;
 allow 163.172.45.102;
@@ -202,7 +202,6 @@ allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
-allow 178.17.174.198;
 allow 178.175.131.141;
 allow 178.175.142.26;
 allow 178.175.148.209;
@@ -536,7 +535,6 @@ allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
-allow 185.38.175.133;
 allow 185.39.207.83;
 allow 185.42.170.203;
 allow 185.56.171.94;
@@ -564,7 +562,6 @@ allow 192.210.255.181;
 allow 192.42.116.13;
 allow 192.42.116.14;
 allow 192.42.116.15;
-allow 192.42.116.17;
 allow 192.42.116.173;
 allow 192.42.116.174;
 allow 192.42.116.175;
@@ -692,7 +689,6 @@ allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
 allow 199.249.230.120;
-allow 2001:1620:51a1:0:8aae:ddff:fe61:8ccc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:220:3039:101:0:1;
@@ -787,7 +783,6 @@ allow 2001:67c:6ec:203:192:42:116:221;
 allow 2001:67c:6ec:203:218:33ff:fe44:5513;
 allow 2001:67c:6ec:203:218:33ff:fe44:5514;
 allow 2001:67c:6ec:203:218:33ff:fe44:5515;
-allow 2001:67c:6ec:203:218:33ff:fe44:5517;
 allow 2001:67c:6ec:203:218:33ff:fe44:5518;
 allow 2001:67c:6ec:203:218:33ff:fe44:5520;
 allow 2001:67c:6ec:203:218:33ff:fe44:5523;
@@ -1031,7 +1026,6 @@ allow 2605:6400:30:f174:1111:2222:3333:4444;
 allow 2605:6400:30:f174:1:2:3:4;
 allow 2605:6400:30:f174::42;
 allow 2605:6400:30:f174:42:42::;
-allow 2605:6400:30:f174:42:42:42:0;
 allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
@@ -1137,8 +1131,6 @@ allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
-allow 2a01:4262:1ab:ffff::133;
-allow 2a01:4f9:c010:8fb::bee;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
@@ -1484,6 +1476,7 @@ allow 2a0c:2500:571:3d9:5f6b:d5f4:a8cf:c713;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
@@ -1531,7 +1524,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 35.0.127.52;
-allow 35.168.83.119;
 allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.120.188.156;
@@ -1648,7 +1640,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.151;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.102.20;
@@ -1675,6 +1666,7 @@ allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
+allow 54.166.237.212;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1724,13 +1716,13 @@ allow 80.78.27.108;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
 allow 82.153.138.182;
 allow 82.153.138.48;
 allow 82.153.138.79;
-allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
@@ -1793,6 +1785,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.217.219.254;
 allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
@@ -1806,6 +1799,7 @@ allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.243.56.177;
+allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
 allow 93.95.228.205;
@@ -1858,6 +1852,6 @@ allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
-allow 95.216.145.1;
 allow 96.27.198.133;
+allow 96.42.26.63;
 allow 96.66.15.152;
