--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,4 +1,3 @@
-deny 2001:1620:51a1:0:8aae:ddff:fe61:8ccc;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
 deny 2001:1b60:3:220:3039:101:0:1;
@@ -92,7 +91,6 @@ deny 2001:67c:6ec:203:192:42:116:221;
 deny 2001:67c:6ec:203:218:33ff:fe44:5513;
 deny 2001:67c:6ec:203:218:33ff:fe44:5514;
 deny 2001:67c:6ec:203:218:33ff:fe44:5515;
-deny 2001:67c:6ec:203:218:33ff:fe44:5517;
 deny 2001:67c:6ec:203:218:33ff:fe44:5518;
 deny 2001:67c:6ec:203:218:33ff:fe44:5520;
 deny 2001:67c:6ec:203:218:33ff:fe44:5523;
@@ -197,7 +195,6 @@ deny 2605:6400:30:f174:1111:2222:3333:4444;
 deny 2605:6400:30:f174:1:2:3:4;
 deny 2605:6400:30:f174::42;
 deny 2605:6400:30:f174:42:42::;
-deny 2605:6400:30:f174:42:42:42:0;
 deny 2605:6400:30:f174:42:42:42:42;
 deny 2605:6400:30:f174:4:3:2:1;
 deny 2605:6400:30:f174:cafe::;
@@ -302,8 +299,6 @@ deny 2a00:1dc0:caff:73::d735;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:2017:1::169;
-deny 2a01:4262:1ab:ffff::133;
-deny 2a01:4f9:c010:8fb::bee;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
@@ -649,6 +644,7 @@ deny 2a0c:2500:571:3d9:5f6b:d5f4:a8cf:c713;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0e:97c0:470::30;
 deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
