--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -125,7 +126,6 @@ set_real_ip_from 139.99.172.11;
 set_real_ip_from 141.239.149.94;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.44.234.69;
-set_real_ip_from 143.110.156.176;
 set_real_ip_from 143.42.110.237;
 set_real_ip_from 143.42.199.223;
 set_real_ip_from 144.172.118.4;
@@ -535,6 +535,7 @@ set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
+set_real_ip_from 185.38.175.133;
 set_real_ip_from 185.39.207.83;
 set_real_ip_from 185.42.170.203;
 set_real_ip_from 185.56.171.94;
@@ -562,6 +563,7 @@ set_real_ip_from 192.210.255.181;
 set_real_ip_from 192.42.116.13;
 set_real_ip_from 192.42.116.14;
 set_real_ip_from 192.42.116.15;
+set_real_ip_from 192.42.116.17;
 set_real_ip_from 192.42.116.173;
 set_real_ip_from 192.42.116.174;
 set_real_ip_from 192.42.116.175;
@@ -783,6 +785,7 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:221;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5513;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
+set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5518;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5520;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5523;
@@ -999,6 +1002,7 @@ set_real_ip_from 2605:6400:20:104e::2;
 set_real_ip_from 2605:6400:20:170c::1;
 set_real_ip_from 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 set_real_ip_from 2605:6400:20:2417::69;
+set_real_ip_from 2605:6400:20:37f:1344:30e9:ce8e:dce5;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
 set_real_ip_from 2605:6400:20:be7::1;
@@ -1026,6 +1030,7 @@ set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
 set_real_ip_from 2605:6400:30:f174:1:2:3:4;
 set_real_ip_from 2605:6400:30:f174::42;
 set_real_ip_from 2605:6400:30:f174:42:42::;
+set_real_ip_from 2605:6400:30:f174:42:42:42:0;
 set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
@@ -1131,6 +1136,7 @@ set_real_ip_from 2a00:1dc0:caff:73::d735;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
+set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
@@ -1516,7 +1522,6 @@ set_real_ip_from 2a12:5940:c80b::2;
 set_real_ip_from 2a12:5940:c814::2;
 set_real_ip_from 2a12:5940:c826::2;
 set_real_ip_from 2a12:5940:d0e2::2;
-set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
@@ -1536,6 +1541,7 @@ set_real_ip_from 37.27.20.230;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 3.93.124.216;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.129.199.163;
@@ -1574,7 +1580,6 @@ set_real_ip_from 45.151.167.10;
 set_real_ip_from 45.151.167.11;
 set_real_ip_from 45.151.167.12;
 set_real_ip_from 45.151.167.13;
-set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.15.158.165;
 set_real_ip_from 45.15.158.39;
 set_real_ip_from 45.56.81.190;
@@ -1666,7 +1671,6 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.39.25.229;
-set_real_ip_from 54.166.237.212;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1716,7 +1720,6 @@ set_real_ip_from 80.78.27.108;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
-set_real_ip_from 81.64.1.143;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
@@ -1853,5 +1856,4 @@ set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.211.7.148;
 set_real_ip_from 96.27.198.133;
-set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
